--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<h1 class="header-title">Сергей Курников</h1>
 					<p class="header-subtitle"> Верстка на HTML/CSS<br>Разработка сайтов под ключ</p>
 					<div class="header-button-block">
-						<button class="header-button">Связаться</button>
+						<a class="header-button" href="https://vk.me/id50684213">Связаться</a>
 						<small>Это бесплатно</small>
 					</div>
 
@@ -100,7 +100,7 @@
 				<div class="col-md-4">
 					<div class="footer-cta-block">
 						<p class="footer-cta">Напишите мне:</p>
-						<button class="footer-btn">Написать</button>
+						<a class="footer-btn" href="https://vk.me/id50684213">Написать</a>
 					</div>	
 				</div>
 			</div>
